[package]
name = "stereo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wgpu = "0.14.0"
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
